# asu-dotfiles

./: .fehbg  .vimrc  .xinitrc  .zshrc  README.MD
.config/alacritty/: alacritty.toml  alacritty.yml
.config/i3/: config
.config/nvim/: init.lua  init.vim  nvim
.config/nvim/ftdetect/: arnel.lua  qbe.lua
.config/nvim/ftplugin/: arnel.lua  java.lua
.config/nvim/lua/: main_keys.lua  my_lsp.lua  opts.lua  plugins.lua  theme.lua  tsconfig.lua
.config/nvim/lua/plgs/: bar.lua  dap.lua  dbee.lua  git.lua  gonvim.lua  harpoon.lua  py.lua  telescope.lua
.config/nvim/queries/python/: highlights.scm
.config/nvim/syntax/: arnel.lua
.config/picom/: picom.conf
.config/zellij/: config.kdl
.ssh/ghkeys/: ghkey  ghkey.pub
projects/site/: docker-compose.yml
projects/site/ecom/: Dockerfile  pyproject.toml
projects/site/ecom/djackets_django/: settings.py
