[tool.poetry]
name = "ecom"
version = "0.1.0"
description = ""
authors = ["me"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"
pillow = "^9.4.0"
django-rest-framework = "^0.1.0"
django-cors-headers = "^3.13.0"
djoser = "^2.1.0"
stripe = "^5.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
